procedural_macro/tests/fixtures/fail_invalid_value.rs
use procedural_macro::RetryCalculation;

trait Calc {
    fn calc_count(&self) -> usize;
}

#[derive(RetryCalculation)]
#[calculation = "not-a-number"]
struct MyCalc; 